--- a/Linkup/res/layout/help_dialog.xml
+++ b/Linkup/res/layout/help_dialog.xml
@@ -37,6 +37,18 @@
         android:textColor="#000000"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/dialog_link"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dip"
+        android:layout_marginLeft="30dip"
+        android:layout_marginRight="30dip"
+        android:layout_marginTop="10dip"
+        android:gravity="center"
+        android:text="@string/link_text"
+        android:textSize="18sp" />
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
