--- a/Linkup/res/layout/activity_top.xml
+++ b/Linkup/res/layout/activity_top.xml
@@ -27,13 +27,39 @@
         android:gravity="center"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/tvCurLevel"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textColor="#FFFFFF33"
-            android:textSize="20sp" />
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/ivPreLevel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:onClick="preLevel"
+                android:src="@drawable/top_back"
+                tools:ignore="contentDescription" />
+
+            <TextView
+                android:id="@+id/tvCurLevel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#FFFFFF33"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/ivNextLevel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:onClick="nextLevel"
+                android:src="@drawable/top_next"
+                tools:ignore="contentDescription" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -63,25 +89,5 @@
                 android:prompt="@string/select_level" />
         </LinearLayout>
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="5dp"
-        android:onClick="preLevel"
-        android:src="@drawable/top_back"
-        tools:ignore="contentDescription" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="5dp"
-        android:onClick="nextLevel"
-        android:src="@drawable/top_next"
-        tools:ignore="contentDescription" />
 
 </RelativeLayout>
