--- a/Linkup/res/layout/topitem.xml
+++ b/Linkup/res/layout/topitem.xml
@@ -27,6 +27,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         android:orientation="vertical" >
 
         <TextView
