--- a/Linkup/res/layout/topitem.xml
+++ b/Linkup/res/layout/topitem.xml
@@ -25,9 +25,10 @@
         tools:ignore="contentDescription" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical" >
 
@@ -51,11 +52,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
-        android:layout_weight="1"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/date"
@@ -66,6 +66,15 @@
             android:gravity="right"
             android:textColor="#88888888"
             android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/ivLike"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="2dp"
+            android:onClick="clickLike"
+            tools:ignore="contentDescription" />
     </LinearLayout>
 
 </LinearLayout>
