--- a/Linkup/res/layout/activity_top.xml
+++ b/Linkup/res/layout/activity_top.xml
@@ -1,110 +1,138 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rltTop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/toplist"
+    android:background="@drawable/top_bj"
     android:orientation="vertical"
     tools:context=".TopActivity" >
 
     <LinearLayout
-        android:id="@+id/topUsers"
+        android:id="@+id/lltMain"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="140dp"
-        android:background="#8800ff00"
-        android:gravity="center"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/searchMini"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/topUsers"
-        android:layout_gravity="bottom"
+        android:layout_height="fill_parent"
         android:gravity="center"
         android:orientation="vertical" >
 
-        <LinearLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/tvCurLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:textColor="#FFFF0000"
+            android:textSize="20sp" />
 
-            <!-- <ImageView -->
-            <!-- android:id="@+id/ivPreLevel" -->
-            <!-- android:layout_width="wrap_content" -->
-            <!-- android:layout_height="wrap_content" -->
-            <!-- android:layout_marginLeft="5dp" -->
-            <!-- android:onClick="preLevel" -->
-            <!-- android:src="@drawable/top_back" -->
-            <!-- tools:ignore="contentDescription" /> -->
-
-            <TextView
-                android:id="@+id/tvCurLevel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="#FFFFFF33"
-                android:textSize="20sp" />
-
-            <!-- <ImageView -->
-            <!-- android:id="@+id/ivNextLevel" -->
-            <!-- android:layout_width="wrap_content" -->
-            <!-- android:layout_height="wrap_content" -->
-            <!-- android:layout_marginRight="5dp" -->
-            <!-- android:onClick="nextLevel" -->
-            <!-- android:src="@drawable/top_next" -->
-            <!-- tools:ignore="contentDescription" /> -->
+        <LinearLayout
+            android:id="@+id/topUsers"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_weight="10"
+            android:gravity="center"
+            android:orientation="vertical" >
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#88888888"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/ivSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/top_search"
+                android:gravity="center"
+                android:onClick="showSearch"
+                android:textColor="#FFFF0000"
+                android:textSize="24sp"
+                tools:ignore="contentDescription" />
+
+            <ImageView
+                android:id="@+id/ivShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/top_share"
+                android:gravity="center"
+                android:onClick="shareTop"
+                android:textColor="#FFFFFFFF"
+                android:textSize="24sp"
+                tools:ignore="contentDescription" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lltSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#88888888"
+        android:gravity="bottom"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:gravity="center"
             android:orientation="horizontal" >
 
             <Spinner
                 android:id="@+id/spModes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="0dp"
                 android:entries="@array/modes"
+                android:gravity="center"
                 android:prompt="@string/select_mode" />
 
             <Spinner
                 android:id="@+id/spRanks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="0dp"
                 android:entries="@array/mode0ranks"
+                android:gravity="center"
                 android:prompt="@string/select_rank" />
 
             <Spinner
                 android:id="@+id/spLevels"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="0dp"
                 android:entries="@array/levels"
+                android:gravity="center"
                 android:prompt="@string/select_level" />
         </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_cancel_back"
+            android:onClick="hideSearch"
+            android:text="@string/cancel"
+            android:textColor="#ffffffff"
+            android:textSize="20sp" />
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp" >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="shareTop"
-            android:src="@drawable/share2"
-            tools:ignore="contentDescription" >
-        </ImageView>
-    </RelativeLayout>
 
 </RelativeLayout>
