--- a/Linkup/res/layout/level_top.xml
+++ b/Linkup/res/layout/level_top.xml
@@ -13,30 +13,32 @@
 
         <TextView
             android:id="@+id/level_tvWeibo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:layout_margin="12dp"
+            android:layout_weight="1"
             android:background="@drawable/weibo_login"
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/login_with_sina_weibo"
             android:textColor="@color/white"
-            android:textSize="18sp" >
+            android:textSize="20sp" >
         </TextView>
 
         <TextView
             android:id="@+id/level_tvQq"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:layout_margin="12dp"
+            android:layout_weight="1"
             android:background="@drawable/qq_login"
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/login_with_qzone"
             android:textColor="@color/white"
-            android:textSize="18sp" >
+            android:textSize="20sp" >
         </TextView>
     </LinearLayout>
 
